examples/test/testpolicy14346.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14346
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key33: value13
      key17: value8
      key26: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value44
          key26: value15
      podSelector:
        matchLabels:
          key40: value32
          key8: value33
